bug arreglado de visibilidad